--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
+  rflutter_alert: ^1.0.3
 
 dev_dependencies:
   flutter_test:
